--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
                 <a href="098-scroll indicator/">Scroll Indicator</a>
                 <a href="099-star rating/">Star Rating</a>
                 <a href="100-tooltip effects/">Tooltip Effects</a>
+                <a href="101-cascade layers/">Cascade layer</a>
+                <a href="102-container queries/">Container queries</a>
         </div>
     </div>
 </body>
