--- a/index.html
+++ b/index.html
@@ -71,108 +71,122 @@
         <h1>All Hundred Animation and Design Projects</h1>
         <div class="link-grid">
             <a href="000-boilerplate/">Boilerplate</a>
-            <a href="001-expanding cards/">Expanding Cards</a>
+            <a href="001-expanding cards/">Expanding cards</a>
             <a href="002-progress steps/">Progress Steps</a>
-            <a href="003-rotating navigation/">Rotating Navigation</a>
-            <a href="004-hidden search widget/">Hidden Search Widget</a>
-            <a href="005-blurry loading/">Blurry Loading</a>
-            <a href="006-accordion list/">Accordion List</a>
-            <a href="007-split landing page/">Split Landing</a>
-            <a href="008-form wave animation/">Form Wave Animation</a>
-            <a href="009-3d animation/">3D Animation</a>
-            <a href="010-portfolio grid/">Portfolio Grid</a>
-            <a href="011-weather app/">Weather App</a>
-                <a href="012-quiz app/">Quiz App</a>
-                <a href="013-portfolio grid 2/">Portfolio Grid 2</a>
-                <a href="014-animated navigation/">Animated Navigation</a>
-                <a href="015-weather app 2/">Weather App 2</a>
-                <a href="016-quiz app 2/">Quiz App 2</a>
-                <a href="017-portfolio grid 3/">Portfolio Grid 3</a>
-                <a href="018-background slider/">Background Slider</a>
-                <a href="019-portfolio grid 4/">Portfolio Grid 4</a>
-                <a href="020-quiz app 3/">Quiz App 3</a>
-                <a href="021-portfolio grid 5/">Portfolio Grid 5</a>
-                <a href="022-weather app 3/">Weather App 3</a>
-                <a href="023-quiz app 4/">Quiz App 4</a>
-                <a href="024-portfolio grid 6/">Portfolio Grid 6</a>
-                <a href="025-sticky navigation/">Sticky Navigation</a>
-                <a href="026-portfolio grid 7/">Portfolio Grid 7</a>
-                <a href="027-toast notification/">Toast Notification</a>
-                <a href="028-portfolio grid 8/">Portfolio Grid 8</a>
-                <a href="029-quiz app 5/">Quiz App 5</a>
-                <a href="030-portfolio grid 9/">Portfolio Grid 9</a>
-                <a href="031-weather app 4/">Weather App 4</a>
-                <a href="032-quiz app 6/">Quiz App 6</a>
-                <a href="033-portfolio grid 10/">Portfolio Grid 10</a>
-                <a href="034-animated countdown/">Animated Countdown</a>
-                <a href="035-portfolio grid 11/">Portfolio Grid 11</a>
-                <a href="036-quiz app 7/">Quiz App 7</a>
-                <a href="037-pokedex/">Pokédex</a>
-                <a href="038-mobile tab navigation/">Mobile Tab Navigation</a>
-                <a href="039-quiz app 8/">Quiz App 8</a>
-                <a href="040-3d boxes background/">3D Boxes Background</a>
-                <a href="041-verify account UI/">Verify Account UI</a>
-                <a href="042-live user filter/">Live User Filter</a>
-                <a href="043-feedback UI design/">Feedback UI Design</a>
-                <a href="044-custom range slider/">Custom Range Slider</a>
-                <a href="045-netflix mobile navigation/">Netflix Mobile Navigation</a>
-                <a href="046-quiz app/">Quiz App</a>
-                <a href="047-testimonial box switcher/">Testimonial Box Switcher</a>
-                <a href="048-random image generator/">Random Image Generator</a>
-                <a href="049-todo list/">To-do List</a>
-                <a href="050-quiz app 9/">Quiz App 9</a>
-                <a href="051-video background/">Video Background</a>
-                <a href="052-portfolio grid/">Portfolio grid</a>
-                <a href="053-touch slider/">touch slider</a>
-                <a href="054-css loaders/">css loader</a>
-                <a href="055-glass dashboard/">glass dashboard</a>
-                <a href="056-image comparison slider/">imagecomparison slide</a>
-                <a href="057-parallax background svg/">Parallex background svg</a>
-                <a href="058-3D product card/">3D product Card</a>
-                <a href="059-form validator/">Form validator</a>
-                <a href="060-quiz app 10/">Quiz app 10</a>
-                <a href="061-custom video player/">Custome Video Player</a>
-                <a href="062-exchange rate calculator/">Exhange Rate calculator</a>
-                <a href="063-quiz app 11/">Quiz app 11</a>
-                <a href="064-menu slider modal/">Menu SLider modal</a>
-                <a href="065-hangman game/">hangman game </a>
-                <a href="066-quiz app 12/">Quiz app 12</a>
-                <a href="067-Memory game/">Memory game</a>
-                <a href="068-movie app project/">movie app project</a>
-                <a href="069-double click heart like/">Double click heart like</a>
-                <a href="070-password strength background/">Password strength bg</a>
-                <a href="071-quiz app 13/">Quiz app 13</a>
-                <a href="072-drag drop/">Drag Drop </a>
-                <a href="073-project tracker/">Project tracker</a>
-                <a href="074-gallery slider/">Gallery slider</a>
-                <a href="075-link preview component/">link preview component</a>
-                <a href="076-progress loader/">Progress Loader</a>
-                <a href="077-testimonals auto switcher/">Testimonals auto switc</a>
-                <a href="078-quote generator/">quote generator</a>
-                <a href="079-typing animation/">Typing Animation</a>
-                <a href="080-accordion dropdown/">Accordion dropdown</a>
-                <a href="081-faq list/">FAQ List</a>
-                <a href="082-task manager/">Task manager</a>
-                <a href="083-signature pad/">Signature pad</a>
-                <a href="084-timer stopwatch/">Timer stopwatch</a>
-                <a href="085-movie search/">Movie Search</a>
-                <a href="086-slidein on scroll/">SlideIn on Scroll</a>
-                <a href="087-lightbox effect/">LightBox Effect</a>
-                <a href="088-navbar animation/">Navbar Animation</a>
-                <a href="089-image viewer/">Image Viewer</a>
-                <a href="090-progressive slider/">Progressive Slider</a>
-                <a href="091-image preloader/">Image Preloader</a>
-                <a href="092-analog clock/">Analog Clock</a>
-                <a href="093-calculator project/">Calculator Project</a>
-                <a href="094-tabs switching/">Tabs Switching</a>
-                <a href="095-range selector/">Range Selector</a>
-                <a href="096-parallax effect/">Parallax Effect</a>
-                <a href="097-ripple button/">Ripple Button</a>
-                <a href="098-scroll indicator/">Scroll Indicator</a>
-                <a href="099-star rating/">Star Rating</a>
-                <a href="100-tooltip effects/">Tooltip Effects</a>
-                <a href="101-cascade layers/">Cascade layer</a>
-                <a href="102-container queries/">Container queries</a>
+            <a href="003-rotating navigation/">Rotating navigation</a>
+            <a href="004-hidden search widget/">Hidden Search widget</a>
+            <a href="005-blurry loading/">Blurry loading</a>
+            <a href="006-scroll animation/">Scroll animation</a>
+            <a href="007-split landing page/">Split Landing Page</a>
+            <a href="008-form wave animation/">Form Wave animation</a>
+            <a href="009-sound board/">Sound Board</a>
+            <a href="010-dad jokes/">Dad jokes</a>
+            <a href="011-event KeyCodes/">event keycodes</a>
+            <a href="012-FAQ collapse/">Faq collapse</a>
+            <a href="013-random choice picker/">Random Choice Picker</a>
+            <a href="014-animated navigation/">Animation navigation</a>
+            <a href="015-incrementing counter/">015-incrementing counter</a>
+            <a href="016-drink water/">drink water</a>
+            <a href="017-movie app/">movie app</a>
+            <a href="018-background slider/">Background Slider</a>
+            <a href="019-theme clock/">theme clock</a>
+            <a href="020-button ripple effect/">Buttin ripple effect</a>
+            <a href="021-drag n drop/">Drag and Drop</a>
+            <a href="022-drawing app/">Drawing app</a>
+            <a href="023-kinetic loader/">kinetic Loader</a>
+            <a href="024-content placeholder/">content placeholder</a>
+            <a href="025-sticky navigation/">Sticky Navigation</a>
+            <a href="026-double vertical slider/">double vertical slider</a>
+            <a href="027-toast notification/">Toast notification</a>
+            <a href="028-portfolio grid 8/">Portfolio grid 8</a>
+            <a href="029-double click heart/">double click heart</a>
+            <a href="030-auto text effect/">auto text effect</a>
+            <a href="031-password generator/">Password generator</a>
+            <a href="032-good cheap fast/">good cheap fast</a>
+
+
+            <a href="033-notes app/">notes app</a>
+            <a href="034-animated countdown/">Animation Countdown</a>
+            <a href="035-image carousel/">image carousel</a>
+            <a href="036-hoverboard/">Hover board</a>
+            <a href="037-pokedex/">Pokebox</a>
+            <a href="038-mobile tab navigation/">Mobile Tab Navigation</a>
+            <a href="039-password strength background/">039-password Strength Background</a>
+            <a href="040-3d boxes background/">3D Boxes background</a>
+            <a href="041-verify account UI/">Verify account</a>
+            <a href="042-live user filter/">Live User Filter</a>
+
+
+            <a href="043-feedback UI design/">Feedback ui Design</a>
+
+            <a href="044-custom range slider/">Custom range Slider</a>
+
+            <a href="045-netflix mobile navigation/">Netflix Mobile Navigatio</a>
+
+            <a href="046-quiz app/">Quiz app</a>
+
+            <a href="047-testimonial box switcher/">Testimonial Box</a>
+
+            <a href="048-random image generator/">Random Image generator</a>
+
+            <a href="049-todo list/">To do list</a>
+
+            <a href="050-insect catch game/">insect Catch game</a>
+            <a href="051-video background/">Video Background</a>
+            <a href="052-portfolio grid/">Portfolio grid</a>
+            <a href="053-touch slider/">touch slider</a>
+            <a href="054-css loaders/">css loader</a>
+            <a href="055-glass dashboard/">glass dashboard</a>
+            <a href="056-image comparison slider/">imagecomparison slide</a>
+            <a href="057-parallax background svg/">Parallex background svg</a>
+            <a href="058-3D product card/">3D product Card</a>
+            <a href="059-form validator/">Form validator</a>
+            <a href="060-movie seat booking//">Movie Seat Boooking </a>
+            <a href="061-custom video player/">Custome Video Player</a>
+            <a href="062-exchange rate calculator/">Exhange Rate calculator</a>
+            <a href="063-DOM array methods/">Dom array methods</a>
+            <a href="064-menu slider modal/">Menu SLider modal</a>
+            <a href="065-hangman game/">hangman game </a>
+            <a href="066-meal finder/">Meal finder</a>
+            <a href="067-expense tracker/">expense Tracker</a>
+            <a href="068-music player/">Music Player</a>
+            <a href="069-infinite scroll posts/">infinite scroll post </a>
+            <a href="070-typing game/">Typing game </a>
+            <a href="071-speech text reader/">Speech text reader</a>
+            <a href="072-memory cards/">Memory Card</a>
+            <a href="073-lyrics search app/">lyrics Search app</a>
+            <a href="074-relaxer app/">relaxer app</a>
+            <a href="075-breakout game/">breakout game</a>
+            <a href="076-new year countdown/">new year countdown</a>
+            <a href="077-sortable list/">077-sortablelist</a>
+            <a href="078-speak number guessing game/">Speak Number guessing game</a>
+            <a href="079-creative agency website/">Creative Agency Website</a>
+            <a href="080-health dashboard/">health dashboard</a>
+
+            <a href="081-animated SVG/">animated SVG</a>
+            <a href="082-parallax landing page/">parallax landing page</a>
+            <a href="083-full screen image slider/">full screen image slider</a>
+            <a href="084-fluid image lightbox/">fluid image lightbox</a>
+            <a href="085-sneaker shop/">sneaker shop</a>
+            <a href="086-coming soon page/">coming soon page</a>
+            <a href="087-sliding signin signup form/">sliding signin signup form</a>
+            <a href="088-promo code/">promo code</a>
+            <a href="089-one color UI/">one color UI</a>
+            <a href="090-tooltip/">tooltip</a>
+
+
+            <a href="091-chat interface/">chat interface</a>
+            <a href="092-music streaming service/">music streaming service</a>
+            <a href="093-creative portfolio/">creative Portfolio</a>
+            <a href="094-laptop UI/">laptop UI</a>
+            <a href="095-headphones product page/">headphones product page</a>
+            <a href="096-cloud hosting service/">cloud hosting service</a>
+            <a href="097-terminal style landing page/">terminal style landing page</a>
+            <a href="098-magazine layout/">magazine layout</a>
+            <a href="099-parallax website/">Parallex website</a>
+            <a href="100-hulu webpage clone/">hulu app</a>
+            <a href="101-cascade layers/">Cascade layer</a>
+            <a href="102-container queries/">Container queries</a>
         </div>
     </div>
 </body>
